--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,13 @@
 {erl_opts, [{i, ".."},{i, "../signerl"}]}.
 {sub_dirs, ["rel"]}.
+{deps, [
+        {osmo_ss7, "1", {git, "git://git.osmocom.org/erlang/osmo_ss7/", "master"}}
+    ]}.
 {asn1_opts, [ber,verbose]}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
+{plugins, [
+    { rebar3_asn1_compiler, "1.0.0"}
+]}.
+{asn1_opts, [{outdir, "src"}, uper]}.
+{provider_hooks, [{pre, [{compile, {asn1, compile}}]},
+             {post, [{clean, {asn1, clean}}]}]}.
