--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,6 @@
 {sub_dirs, ["rel"]}.
+{deps, [
+        {osmo_ss7, "1", {git, "git://git.osmocom.org/erlang/osmo_ss7/", "master"}}
+    ]}.
 {asn1_opts, [ber,verbose]}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
