WIP apple patch for ss7MapPeer

--- a/rebar.config
+++ b/rebar.config
@@ -2,5 +2,9 @@
 {deps, [
         {osmo_ss7, "1", {git, "git://git.osmocom.org/erlang/osmo_ss7/", "master"}}
     ]}.
-{asn1_opts, [ber,verbose]}.
+{plugins, [
+     { rebar3_asn1_compiler, "1.0.0"}
+ ]}.
+{asn1_opts, [{outdir, "src"}, ber, verbose]}.
+
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
